terraform/deploy/database.tf
#######
# Database
######

resource "aws_db_subnet_group" "main" {
  name = "${local.prefix}-main"
  subnet_ids = [
    aws_subnet.private_a.id,
    aws_subnet.private_b.id

  ]
  tags = {
    Name = "${local.prefix}-db-subnet-group"
  }

}
resource "aws_security_group" "rds" {
  description = "allow access to the rds instance"
  name        = "${local.prefix}-rds-inbound-access"
  vpc_id      = aws_vpc.main.id

  ingress {
    protocol  = "tcp"
    from_port = 5432
    to_port   = 5432
  }

  tags = {
    Name = "${local.prefix}-db-security-group"
  }

}

resource "aws_db_instance" "main" {
  identifier                 = "${local.prefix}-db"
  db_name                    = "cloudops"
  allocated_storage          = 20
  storage_type               = "gp2"
  engine                     = "postgres"
  engine_version             = "15.3"
  auto_minor_version_upgrade = true
  instance_class             = "db.t4g.micro"
  username                   = var.db_username
  password                   = var.db_password
  # snapshot shot should be false when u considering keeping the project working
  skip_final_snapshot  = true
  db_subnet_group_name = aws_db_subnet_group.main.name
  # multi az should be set to true if u want zero down time
  multi_az = false
  # to keep an automatic backup change this
  backup_retention_period = 0
  vpc_security_group_ids  = [aws_security_group.rds.id]
  tags = {
    Name = "${local.prefix}-main"
  }

}
